devops/k8s/csvc/templates/jhipster-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster-console
  namespace: enterpriseapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster-console
  template:
    metadata:
      labels:
        app: jhipster-console
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - image: jhipster/jhipster-console:v4.1.0
        name: jhipster-console
        ports:
        - containerPort: 5601
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jhipster-console
  namespace: enterpriseapp
  labels:
    app: jhipster-console
spec:
  ports:
  - name: http
    port: 5601
    targetPort: 5601
  type: 
  selector:
    app: jhipster-console
---
