devops/k8s/csvc/templates/jhipster-console-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jhipster-console-gateway
  namespace: enterpriseapp
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - jhipster-console.enterpriseapp.192.168.99.100.nip.io
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - jhipster-console.enterpriseapp.192.168.99.100.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jhipster-console-gw-virtualservice
  namespace: enterpriseapp
spec:
  hosts:
  - jhipster-console.enterpriseapp.192.168.99.100.nip.io
  gateways:
  - jhipster-console-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jhipster-console
